# PyTerp

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yaml
examples/: basic_usage.py  classification_usage.py
src/: calculateAllocationScores.cpp  calculateNeighborLines.cpp  extractionVariables.cpp  extractionVariablesResult.cpp  interpolator.cpp  variablesExtraction.cpp
