[build-system]
# Esta seção permanece a mesma. Já está correta.
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.10",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
# Esta seção permanece a mesma.
name = "pyterp"
dynamic = ["version"] # Essencial para que o setuptools-scm funcione
authors = [
  { name="Jonathan Motta", email="jonathangmotta98@gmail.com" },
]
description = "A package for performing optimized k-NN IDW interpolation using C++."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "interpolation", "k-NN", "IDW", "C++", "parallel", "numpy", "performance"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
]
dependencies = [
    "numpy>=2.0.0",
]

[project.urls]
# Esta seção permanece a mesma.
Homepage = "https://github.com/jgmotta98/PyTerp"
"Bug Tracker" = "https://github.com/jgmotta98/PyTerp/issues"
"Source Code" = "https://github.com/jgmotta98/PyTerp"

[tool.setuptools-scm]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.bdist_wheel]
universal = false

[[tool.setuptools.ext_modules]]
name = "pyterp"
sources = ["src/interpolator.cpp"]
language = "c++"
extra_compile_args = {cflags = ["-O3", "-fopenmp"], cflags_win = ["/O2", "/openmp"]}

py_limited_api = false
include_dirs = [
    "src",
    { "type" = "pybind11", "sub-dir" = "include" }
]